--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,45 @@
+# Python
 __pycache__/
-*.pyc
-output*
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Build artifacts (PyInstaller)
+*.spec
+build/
+dist/
+
+# Virtual Environment
+venv/
+.venv/
+ENV/
+
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Project Outputs
+outputs/
+
+# User-specific
+.env
+.gemini/
